# artifacts/api-server/src/routes/index.ts
@@ -2,7 +2,6 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import profilesRouter from "./profiles";
 import dashboardRouter from "./dashboard";
-import requestsRouter from "./requests";
 import partnersRouter from "./partners";
 import ordersRouter from "./orders";
 import pricesRouter from "./prices";
@@ -15,7 +14,6 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use("/profiles", profilesRouter);
 router.use("/dashboard", dashboardRouter);
-router.use("/requests", requestsRouter);
 router.use("/partners", partnersRouter);
 router.use("/orders", ordersRouter);
 router.use("/prices", pricesRouter);
